migración de MongoDB que era no relacional a MySQL, implementado el login y varias cosas más como paginacion y detalles peliculas y demás

--- a/src/common/MovieDetails/MovieDetails.css
+++ b/src/common/MovieDetails/MovieDetails.css
@@ -107,6 +107,15 @@ h2 span {
 }
 
 /* tagline, descripcion, director */
+.icons {
+    font-size: 2em;
+    cursor: pointer;
+}
+
+.icons > * {
+    margin-right: 0.7em; /* Añade espacio entre los íconos */
+}
+
 h3.tagline {
     padding-bottom: 1em;
     margin-bottom: 0;
